kubernetes/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo:latest
          volumeMounts:
          - name: mongo-data
            mountPath: /data/db
          resources:
            limits:
              memory: 1Gi
              cpu: "0.3"
            requests:
              memory: 512Mi
              cpu: "0.2"
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            tcpSocket:
              port: 27017
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: local-pvc
